# AiVoiceScheduler

./: .gitignore  Dockerfile  README.md  bot.py  calendar_service.py  pyproject.toml  server.py
